# ai-config

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/ai-config-target-refresh/: SKILL.md
.agents/skills/ai-config-target-refresh/references/: compatibility-audit-workflow.md  pr12-case-study.md  runtime-probes.md  validation-matrix.md
.ai/: TMP_INTEGRATION_CHECKLIST.md
.ai/plans/2026-02-04-1530-plugin-conversion-spec/: IMPLEMENTATION_LEARNINGS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  RESEARCH_REPORT.md
.ai/plans/2026-02-05-0600-emitter-protocol-tmux-validation/: IMPLEMENTATION.md  LEARNING_LOG.md  SPEC.md  TODO.md
.ai/plans/2026-02-06-0900-conversion-quality-upgrade/: IMPLEMENTATION.md  LEARNING_LOG.md  SPEC.md  TODO.md
.github/workflows/: docs.yml  e2e.yml  publish.yml  tests.yml
ai_agent_docs/: adding-a-target.md  conversion-pipeline.md  e2e-testing.md  target-compatibility-baseline.md
commands/: index.html
config/: index.html
conversion/: index.html
docs/: AGENTS.md  adding-a-target.md  commands.md  config.md  conversion-pipeline.md  conversion.md  e2e-testing.md  index.md
search/: search_index.json
src/: AGENTS.md
src/ai_config/: __init__.py  __main__.py  cli.py  cli_render.py  cli_theme.py  config.py  init.py  operations.py  scaffold.py  settings.py  types.py  watch.py
src/ai_config/adapters/: __init__.py  claude.py
src/ai_config/converters/: __init__.py  claude_parser.py  convert.py  emitters.py  ir.py  report.py
src/ai_config/validators/: __init__.py  base.py  context.py
src/ai_config/validators/component/: __init__.py  hook.py  mcp.py  skill.py
src/ai_config/validators/marketplace/: __init__.py  validators.py
src/ai_config/validators/plugin/: __init__.py  validators.py
tests/docker/: Dockerfile.all-tools  Dockerfile.claude-only  test_in_docker.py
tests/e2e/: MANUAL_VALIDATION.md  __init__.py  conftest.py  test_conversion.py  test_fresh_install.py  test_integration_smoke.py  test_multi_tool.py  test_tool_validation.py  tmux_helper.py
tests/fixtures/sample-plugins/complete-plugin/: .lsp.json  .mcp.json
tests/fixtures/test-marketplace/: marketplace.json
tests/fixtures/test-marketplace/test-plugin/: .mcp.json  (+1 more)
tests/integration/: __init__.py  test_watch_integration.py
tests/unit/: __init__.py  test_adapters_claude.py  test_cli.py  test_cli_doctor_target.py  test_cli_render.py  test_config.py  test_init.py  test_init_conversion.py  test_marketplace_fixtures.py  test_operations.py  test_scaffold.py  test_settings.py  test_types.py  test_validators_base.py  test_validators_hook.py  test_validators_marketplace.py  test_validators_mcp.py  test_validators_plugin.py  test_validators_skill.py  test_watch.py
tests/unit/converters/: __init__.py  test_conversion.py  test_emitter_protocol.py
tests/unit/validators/: test_target_validators.py
(+13 files in other folders)
